# phonebook-database-course-project

./: CMakeLists.txt  Company.cpp  Header.h  Human.cpp  Interface.cpp  Intface.h  List.h  Person.cpp  Person.h  Protect.h  Session.cpp  Session.h  Types.h  main.cpp
Data/: Company.h  Human.h  LegalPerson.cpp  LegalPerson.h  NaturalPerson.cpp  NaturalPerson.h
Interface/: Interface.h
List/: List.cpp
Protect/: Protect.cpp
